...
    );
  }

  const { accounts, dashboard, upcomingFlows } = data;

  return (
    <View style={{ flex: 1 }} testID="dashboard-screen">
      <AppCollapsingHeader header={header} small={<SpendingHeaderSmallCard summary={dashboard} />}>
        <View style={{ paddingTop: header.collapsedHeight, paddingHorizontal: spacing.lg }}>
          <DashboardHeaderLargeCard summary={dashboard} upcomingFlows={upcomingFlows} />
        </View>
      </AppCollapsingHeader>

...
