appId: ${MAESTRO_APP_ID}
tags:
  - regression
---
- runFlow: ../common/start-app.yaml
- assertVisible: Add To Shopping Cart
- tapOn: Add To Shopping Cart
- assertVisible: Purchase
- assertVisible: Cashflow details
- runFlow: ../common/fields/enter-amount.yaml
- runFlow: ../common/fields/enter-date.yaml
- runFlow: ../common/fields/enter-account.yaml
- runFlow: ../common/fields/enter-category.yaml
- runFlow: ../common/fields/enter-tags.yaml
- runFlow: ../common/fields/enter-note.yaml
- tapOn: Add
- assertVisible: Welcome Home!
- runFlow: ../common/stop-app.yaml
